--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #7099c8;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +39,43 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Cards {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.Card {
+  height: 300px;
+  width: 300px;
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+  transition: 0.3s;
+  background-color: white;
+  box-sizing: inherit;
+  float: left;
+  margin: 16px;
+  padding: 20px;
+
+  border-radius: 6px;
+  padding: 20px;
+}
+
+.Avatar {
+  vertical-align: middle;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #7099c8;
+}
+
+button {
+  cursor: pointer;
+}
+
+button.following {
+  background-color: #377d22;
+  color: white;
 }
